[metadata]
name = pymavlink
version = file: _version.py
url = https://github.com/ArduPilot/pymavlink
description = Library for handling MAVLink protocol streams and log files.
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
license = LGPLv3
license_files = COPYING
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Intended Audience :: Science/Research
    Programming Language :: Python
    Environment :: Console
    Topic :: Software Development
    Topic :: Scientific/Engineering

[options]
python_requires = >= 3.6
install_requires =
    lxml>=3.6.0
    future>=0.15.2

zip_safe = False
# for now, we punt to setup.py for packages

[options.extras_require]
doc =
    sphinx
    sphinx_rtd_theme
    sphinxcontrib-apidoc
test =
    pytest
    pytest-mock
    numpy
cov =
    pytest-cov
    coverage[toml]
    coverage_python_version
all =
    %(cov)s
    %(doc)s
    %(test)s

[check]
metadata = true
restructuredtext = true
strict = false

[check-manifest]
ignore =
    .gitattributes
    .gitignore
    .pre-commit-config.yaml
